<resources>
    <string name="app_name">Voice Calendar</string>
    <string name="record">Record</string>
    <string name="event">Event</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="upcomingEvents">Upcoming Events</string>
    <string name="click">Click to add an event</string>
    <string name="deleteAll">Delete all events</string>
    <string name="addManually">Add Event Manually</string>
    <string name="delete">Delete</string>
    <string name="appVersion">Voice Calendar V 1.0</string>
    <string name="contact">Contact us: a.elamin95@gmail.com</string>
    <string name="HowToUse">How to use</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
</resources>
