<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/appVersion"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/contact"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnTutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HowToUse"
        android:textColor="@android:color/background_dark" />

</LinearLayout>